--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -27,7 +27,7 @@ jobs:
 
       - run: databricks bundle deploy
         env:
-          DATABRICKS_TOKEN: ${{ secrets.E2_DEMO_WEST_TOKEN }}
+          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_DEV }}
           DATABRICKS_BUNDLE_ENV: dev
 
   pipeline_update:
@@ -56,8 +56,8 @@ jobs:
           set -o pipefail
           databricks bundle run fe_medium_metrics --refresh-all 2>&1 | tee output.log
         env:
-          DATABRICKS_TOKEN: ${{ secrets.E2_DEMO_WEST_TOKEN }}
-          DATABRICKS_BUNDLE_ENV: qa
+          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_DEV }}
+          DATABRICKS_BUNDLE_ENV: dev
 
 #       - shell: bash
 #         if: always()
@@ -67,4 +67,4 @@ jobs:
 #           update_id=$(head -1 output.log | awk -F / '{print $8}')
 #           PYTHONPATH=$PWD:$PWD/.github/support python3 .github/support/emit_annotations.py $pipeline_id $update_id
 #         env:
-#           DATABRICKS_TOKEN: ${{ secrets.E2_DEMO_WEST_TOKEN }}
+#           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_DEV }}
