--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -54,7 +54,7 @@ jobs:
         name: Run pipeline update
         run: |
           set -o pipefail
-          databricks bundle run fe_medium_metrics --refresh-all 2>&1 | tee output.log
+          databricks bundle run kafka_stream_job --refresh-all 2>&1 | tee output.log
         env:
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_DEV }}
           DATABRICKS_BUNDLE_ENV: dev
