--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -24,8 +24,8 @@ jobs:
 
       - run: databricks bundle deploy
         env:
-          DATABRICKS_TOKEN: ${{ secrets.E2_DEMO_WEST_TOKEN }}
-          DATABRICKS_BUNDLE_ENV: production
+          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_DEV }}
+          DATABRICKS_BUNDLE_ENV: prod
 
   pipeline_update:
     name: "Run pipeline update"
@@ -41,5 +41,5 @@ jobs:
 
       - run: databricks bundle run kafka_stream_job --refresh-all
         env:
-          DATABRICKS_TOKEN: ${{ secrets.E2_DEMO_WEST_TOKEN }}
-          DATABRICKS_BUNDLE_ENV: production
+          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_DEV }}
+          DATABRICKS_BUNDLE_ENV: prod
